--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <script src="js/swiper.min.js" defer></script>
         <script src="youtube-modal/index.js" defer></script>
-        <script src="js/main.js" defer></script>
+        <script  type="module" src="js/main.js" defer></script>
     </head>
 
     <body>
